# Meli-stock

./: README.md  docker-compose.yml  pyproject.toml  teste-api.http
app/: __main__.py
app/database/: connect.py
app/models/: device.py  stock.py
