[tool.poetry]
name = "melistock"
version = "0.1.0"
description = "challenge"
authors = ["ThurSilva <artur.sphv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
peewee = "^3.14.10"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
